# libappindicator-rs

./: Cargo.toml
src/: lib.rs
