[package]
name = "libappindicator"
version = "0.5.2"
authors = ["Kyle Machulis <kyle@nonpolynomial.com>"]
description = "Rust safe bindings for libappindicator"
license = "LGPL-2.1/LGPL-3.0"
homepage = "http://github.com/qdot/libappindicator-rs"
repository = "https://github.com/qdot/libappindicator-rs.git"
readme = "README.md"
keywords = ["linux", "gui", "gtk"]

[dependencies]
log= "0.4.8"
glib= "0.14.5"
gtk = "0.14.0"
gtk-sys = "0.14.0"
libappindicator-sys= "0.5.0"

[[example]]
name="example1"
path="examples/libappindicator-example.rs"
